trunk/Archive2/c7/d5f9a918884792/output
main.cpp:10:5: error: no matching function for call to 'reset'
    reset(x);
    ^~~~~
main.cpp:3:6: note: candidate function not viable: no known conversion from 'int [11]' to 'int (&)[10]' for 1st argument
void reset(int (&array)[10]) {
     ^
1 error generated.
